# flakestorm

./: .gitignore  CHAOS_ENGINE.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  entropix.yaml.example  flakestorm-20260102-233336.html  flakestorm-generate-search-queries.yaml  flakestorm.yaml  flakestorm.yaml.example  pyproject.toml
.cursor/plans/: flakestorm_v2_prd_plan_6b475efd.plan.md
docs/: API_SPECIFICATION.md  BEHAVIORAL_CONTRACTS.md  CONFIGURATION_GUIDE.md  CONNECTION_GUIDE.md  CONTEXT_ATTACKS.md  CONTRIBUTING.md  DEVELOPER_FAQ.md  ENVIRONMENT_CHAOS.md  IMPLEMENTATION_CHECKLIST.md  LLM_PROVIDERS.md  MODULES.md  PUBLISHING.md  REPLAY_REGRESSION.md  TESTING_GUIDE.md  TEST_SCENARIOS.md  USAGE_GUIDE.md  V2_AUDIT.md  V2_SPEC.md
examples/broken_agent/: README.md  agent.py  flakestorm.yaml
examples/keywords_extractor_agent/: GENERATE_SEARCH_QUERIES_PLUGIN.md  README.md  agent.py  requirements.txt
examples/langchain_agent/: README.md  agent.py  requirements.txt
examples/v2_research_agent/: README.md  agent.py  flakestorm.yaml  requirements.txt
examples/v2_research_agent/replays/: incident_001.yaml
rust/: Cargo.toml
rust/src/: lib.rs  parallel.rs  scoring.rs
src/entropix/: __init__.py
src/entropix/assertions/: __init__.py  deterministic.py  safety.py  semantic.py  verifier.py
src/entropix/cli/: __init__.py  main.py
src/entropix/core/: __init__.py  config.py  orchestrator.py  protocol.py  runner.py
src/entropix/integrations/: __init__.py  embeddings.py  github_actions.py  huggingface.py
src/entropix/mutations/: __init__.py  engine.py  templates.py  types.py
src/flakestorm/: __init__.py
src/flakestorm/assertions/: deterministic.py  safety.py  semantic.py  verifier.py
src/flakestorm/chaos/: __init__.py  context_attacks.py  faults.py  http_transport.py  interceptor.py  llm_proxy.py  profiles.py  tool_proxy.py
src/flakestorm/chaos/profiles/: api_outage.yaml  cascading_failure.yaml  degraded_llm.yaml  high_latency.yaml  hostile_tools.yaml  indirect_injection.yaml  model_version_drift.yaml
src/flakestorm/cli/: main.py
src/flakestorm/contracts/: __init__.py  engine.py  matrix.py
src/flakestorm/core/: config.py  orchestrator.py  performance.py  protocol.py  runner.py
src/flakestorm/mutations/: engine.py  llm_client.py  types.py
src/flakestorm/replay/: __init__.py  loader.py  runner.py
src/flakestorm/reports/: ci_report.py  contract_json.py  contract_report.py  models.py  replay_report.py
tests/: __init__.py  test_assertions.py  test_chaos_integration.py  test_config.py  test_contract_integration.py  test_mutations.py  test_orchestrator.py  test_performance.py  test_replay_integration.py  test_reports.py
