[workspace]
members = ["rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Entropix Team"]
repository = "https://github.com/entropix/entropix"

[workspace.dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

