[package]
name = "entropix_rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "entropix_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

